--- a/src/app/index.html
+++ b/src/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="styles/index.css">
     <script type="module" src="index.js"></script>
 </head>
 <body>
