Reworked DataGrid class Tests added for     getDataSource     getParentElement DataSource class     delete reworked     add reworked

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -7,8 +7,6 @@
     <script type="module" src="index.js"></script>
 </head>
 <body>
-<table class = "table">
-
-</table>
+<h1>This is a testing page for DataGrid</h1>
 </body>
 </html>
